--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SP90X</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+	<title><%= title %></title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js"></script>
+  	<%= javascript_include_tag :defaults %>
+    <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/themes/vader/jquery-ui.css" />
+  	<%= stylesheet_link_tag :all %>
+  	<%= csrf_meta_tag %>
+    <meta name="viewport" content="width=device-width" />
 </head>
 <body>
 
-<%= yield %>
+    <div>
+        <a href="<%= root_path%>">
+			<div class="logo"></div>
+		</a>
+    </div>
+    <div class="navigation">
+        <ul class="menu">
+        	<li><%= link_to('Home', root_path) %></li>
+<!--         <?php if($is_logged_in) : ?>
+            <li><?php echo anchor('log', 'Log Progress'); ?></li>
+		<?php endif; ?> -->
+    		<li><%= link_to('Resources', resources_path)%></li>
+        </ul>
+        
+        <ul class="usermenu">
+        
+<!--         <?php if($is_logged_in) : ?>
+			<li>
+			    <a href="#">Manage</a>
+			    <ul>
+			        <li><?php echo anchor('program', 'Programs'); ?></li>
+			        <li><?php echo anchor('group', 'Groups'); ?></li>
+			    </ul>
+			</li>
+			<li>
+                <a href="#"><?php echo $display_name; ?></a>
+                <ul>
+                    <li><?php echo anchor('user', 'Profile'); ?></li>
+			        <li><?php echo anchor('login/logout', 'Logout'); ?></li>
+                </ul>
+            </li>
+		<?php else: ?>  -->
+            <li><%= link_to('Login', '#') %></li>
+            <li><%= link_to('Register', '#') %></li>
+<!--         <?php endif; ?> -->
+        </ul>
+    </div>
+	
+	<div class="copy">
+		<%= yield %>
+	</div>
+
+	<div class="footer">
+		<%= link_to('About', about_path)%>
+		<%= link_to('Feedback', feedback_path)%>
+		<%= link_to('Donate', donate_path)%>
+	</div>
 
 </body>
 </html>
