--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,8 +45,8 @@
                 </ul>
             </li>
 		<?php else: ?>  -->
-            <li><%= link_to('Login', '#') %></li>
-            <li><%= link_to('Register', '#') %></li>
+            <li><%= link_to('Login', login_path) %></li>
+            <li><%= link_to('Register', register_path) %></li>
 <!--         <?php endif; ?> -->
         </ul>
     </div>
