started signup page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,50 @@
 <h1>Register</h1>
-<p>coming soon</p>
+
+<!-- <?php
+echo validation_errors('<p class="error">');
+echo form_open('login/register'); ?>
+
+<div style="overflow:auto">
+<div class="column-1">
+    <fieldset>
+        <legend>Personal Info</legend>
+        <div class="fieldset-content">
+        <?php
+        echo form_label('First Name:', 'first_name');
+        echo form_input('first_name', set_value('first_name', ''));
+        echo form_label('Last Name:', 'last_name');
+        echo form_input('last_name', set_value('last_name', ''));
+        echo form_label('Email Address:', 'email_address');
+        echo form_input('email_address', set_value('email_address', ''));
+        ?>
+        <p>
+        <?php
+        echo form_label('Male', 'gender');
+		echo form_radio('gender', 'M', TRUE);
+        echo form_label('&nbsp;Female', 'gender');
+		echo form_radio('gender', 'F');
+		?>
+		</p>
+        </div>
+    </fieldset>
+</div>
+<div class="column-2">
+    <fieldset>
+        <legend>Account Info</legend>
+        <div class="fieldset-content">
+        <?php
+        echo form_label('Username:', 'username');
+        echo form_input('username', set_value('username', ''));
+        echo form_label('Password:', 'password');
+        echo form_password('password', set_value('password', ''));
+        echo form_label('Password Confirmation:', 'password2');
+        echo form_password('password2', set_value('password2', ''));
+        ?>
+        <p>&nbsp;</p>
+        </div>
+    </fieldset>
+</div>
+</div>
+
+<?php echo form_submit('submit', 'Create Account');?>
+<?php echo form_close(); ?> -->
