--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-<h1>User</h1>
-<%= @user.first_name %> <%= @user.last_name%><br/>
+<h1><%= @user.display_name %></h1>
 <%= @user.email%><br/>
 <%= @user.username%>
