Added web fonts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js"></script>
   	<%= javascript_include_tag :defaults %>
     <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/themes/vader/jquery-ui.css" />
+	<script type="text/javascript" src="/fonts.js"></script>
   	<%= stylesheet_link_tag :all %>
   	<%= csrf_meta_tag %>
     <meta name="viewport" content="width=device-width" />
