--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -1,6 +1,6 @@
 <h1>Resources</h1>
 <ul>
-	<li><%= link_to 'SP90X Program Guide - Microsoft Word (.doc)', '#'%></li>
-	<li><%= link_to 'SP90X Program Guide - Adobe Acrobat (.pdf)', '#'%></li>
-	<li><%= link_to 'SP90X Kickoff Presentation - Microsoft PowerPoint (.ppt)', '#'%></li>
+	<li><%= link_to 'SP90X Program Guide - Microsoft Word (.doc)', '/files/SP90XProgramGuide.doc'%></li>
+	<li><%= link_to 'SP90X Program Guide - Adobe Acrobat (.pdf)', '/files/SP90XProgramGuide.pdf'%></li>
+	<li><%= link_to 'SP90X Kickoff Presentation - Microsoft PowerPoint (.ppt)', '/files/SP90XKickoff.ppt'%></li>
 </ul>
